--- a/css/index.css
+++ b/css/index.css
@@ -34,12 +34,18 @@ body {
 }
 
 body > p {
-  color: #fff;
+  color: #66C0F4;
   margin: 0 0 10px;
-  font-size: 17px;
+  font-size: 24px;
   letter-spacing: 2px;
   font-weight: normal;
+  font-family: Arial, Helvetica, sans-serif;
   padding-top: 2px;
+}
+
+h1 > img {
+  max-width: 300px;
+  height: auto;
 }
 
 header {
@@ -64,10 +70,12 @@ button {
 }
 
 .player {
-  background-color: #171a21;
   text-align: center;
   padding: 25px;
   margin: 10px;
+  background-color: rgba(41,57,88,1.00); 
+  background-image: linear-gradient(333deg, rgba(28,29,31,1.00) 0%, rgba(28,28,30,1.00) 43%, rgba(33,47,73,1.00) 73%, rgba(58,81,125,1.00) 100%);
+  border-radius: 5px;
 }
 
 a, a:visited {
@@ -198,7 +206,7 @@ input {
   font-size: 17px;
   letter-spacing: 2px;
   font-weight: normal;
-  padding-top: 2px;
+  padding-top: 10px;
 }
 
 footer {
