--- a/css/index.css
+++ b/css/index.css
@@ -41,6 +41,7 @@ body > p {
   font-weight: normal;
   font-family: Arial, Helvetica, sans-serif;
   padding-top: 2px;
+  padding-bottom: 10px;
 }
 
 h1 > img {
@@ -75,7 +76,13 @@ button {
   margin: 10px;
   background-color: rgba(41,57,88,1.00); 
   background-image: linear-gradient(333deg, rgba(28,29,31,1.00) 0%, rgba(28,28,30,1.00) 43%, rgba(33,47,73,1.00) 73%, rgba(58,81,125,1.00) 100%);
+  background-position: top left; 
+  background-repeat: no-repeat;
   border-radius: 5px;
+}
+
+.player h2 {
+  margin-top: 0px;
 }
 
 a, a:visited {
@@ -88,6 +95,10 @@ a, a:visited {
   text-overflow: ellipsis;
 }
 
+.profile img {
+  border-radius: 5px;
+}
+
 .playerscore {
   display: block;
   margin: 0 auto;
@@ -97,6 +108,23 @@ a, a:visited {
   list-style: none;
   text-align: left;
   padding-left: 0;
+}
+
+.score-list hr {
+  box-sizing: content-box; 
+  height: 5px; 
+  outline: none; 
+  border: none; 
+  border-radius: 5px; 
+  background-color: #42495a;
+}
+
+.winner {
+  box-shadow: inset 0 0 0 10px #2f89bc;
+}
+
+.loser {
+  opacity: 0.75;
 }
 
 /* Form */
@@ -214,7 +242,7 @@ footer {
   text-align: center;
   position: fixed;
   width: 100%;
-  padding: 15px 0;
+  height: 50px;
   bottom: 0;
   background-color: #171a21;
 }
