Fix player component responsiveness

--- a/css/index.css
+++ b/css/index.css
@@ -24,7 +24,6 @@
   .col-10 {width: 83.33%;}
   .col-11 {width: 91.66%;}
   .col-12 {width: 100%;}
-  .player {margin: 10px;}
 }
 
 body {
@@ -84,6 +83,10 @@ button {
   background-position: top left; 
   background-repeat: no-repeat;
   border-radius: 5px;
+}
+
+@media (min-width: 768px) {
+  .player {margin: 10px;}
 }
 
 .player h2 {
