--- a/css/index.css
+++ b/css/index.css
@@ -73,6 +73,28 @@ button {
   margin-bottom: 10px;
 }
 
+#player0, #player1 { 
+  transition: all .7s ease-out .3s; 
+  opacity: 0; 
+} 
+
+#player0 { 
+  -webkit-transform: translateX(-500px); 
+  transform: translateX(-500px); 
+} 
+
+#player1 { 
+  -webkit-transform: translateX(500px);
+  transform: translateX(500px); 
+} 
+  
+#player0.show-player, 
+#player1.show-player { 
+  /*-webkit-transform: translateX(0px); 
+  transform: translateX(0px);*/
+  opacity: 1; 
+}
+
 .player {
   text-align: center;
   padding: 25px;
