--- a/css/index.css
+++ b/css/index.css
@@ -346,3 +346,21 @@ footer p {
 .row {
   width: 100%;
 }
+
+.linear-wipe {
+  background: linear-gradient(to right, #1b5371 0%, rgba(28,28,30,1.00) 43%, rgba(47, 137, 188, 1) 73%, rgba(58,81,125,1.00) 100%);
+  background-size: 200% auto;
+  
+  color: #000;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  
+  animation: shine 3s linear infinite;
+}
+
+@keyframes shine {
+  to {
+    background-position: 200% center;
+  }
+}
